[package]
name = "molniya"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dialoguer = "0.11"
walkdir = "2"
flate2 = "1"
tar = "0.4"
zip = "0.6"
indicatif = "0.17"
mysql = "25"
dirs = "5"